# questguard

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: example_valid_quest.json  quest_schema.json  world.json
questguard/: __init__.py  bootstrap.py  config.py
questguard.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
questguard/adapters/: json_tools.py  ollama_client.py
questguard/analysis/: diversity_metrics.py  graph_builder.py  graph_metrics.py  set_reviewer.py
questguard/domain/: issues.py  models.py
questguard/experiments/: evaluation.py  fault_injection.py
questguard/generation/: baseline_service.py  prompt_builder.py  service.py
questguard/orchestration/: pipeline.py
questguard/ports/: llm.py
questguard/repair/: __init__.py  deterministic.py  diversity_aware.py  orchestrator.py
questguard/reports/: io.py
questguard/repositories/: world_repository.py
questguard/validation/: base.py  content_validator.py  graph_validator.py  referential_validator.py  schema_validator.py  (+1 more)
scripts/: 00_smoke_test.py  01_generate.py  02_validate.py  03_repair.py  04_analyze.py  05_run_pipeline.py  06_fault_injection.py  07_set_review.py  08_compare_configurations.py  09_run_c5.py  10_aggregate_runs.py  generate_c4_c5_diversity.py  generate_validity_and_errors.py
tests/: conftest.py  test_diversity_aware_repair.py  test_diversity_metrics.py  test_fault_injection.py  test_generation_retry.py  test_graph_validator.py  test_referential_validator.py  test_repair_orchestrator.py  test_schema_validator.py  test_semantic_validator.py
