[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "questguard"
version = "0.1.0"
description = "Quality-gate architecture for LLM-generated game quests"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "jsonschema>=4.21",
  "networkx>=3.2",
  "matplotlib>=3.8"
]

[tool.setuptools.packages.find]
include = ["questguard*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
